octave3.1 (3.1.51-2) UNRELEASED; urgency=low

  * Synch with octave3.0 package

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 06 Jan 2009 11:00:00 +0100

octave3.0 (1:3.0.3-2) experimental; urgency=low

  * debian/patches/polyfit-scaling.dpatch: Add patch for introducing a new
    polyfit.m taken from the Mercurial upstream repository.  This version
    has a new algorithm that improves the numerical stability of the
    results for ill-conditioned input values (closes: #510577).
  * debian/in/control:
    + Synch with the lenny branch
    + Build-depend on libsuitesparse-dev >= 3.2.0

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 03 Jan 2009 12:28:47 +0100

octave3.0 (1:3.0.3-1) experimental; urgency=low

  [ Thomas Weber ]
  * New upstream release:
    + Improved documentation about axes properties (closes: #492070)
    + Check that X and Y are of same size when calling contourf
      (closes: #492223)
    + varargin is now in the manual index (closes: #492992)
    + Better description for shading (closes: #492168)
    + countourf now in the manual (closes: #492224)
  * Drop patch randn_doc.dpatch: applied upstream.
  * Change dont_set_helvetica.dpatch to use an asterisk (*) instead of an
    empty string for the font; see
    http://thread.gmane.org/gmane.comp.gnu.octave.bugs/9843
    for the reasoning. Saving greek symbols as .png or .jpeg continues to not
    work with this, though.

  [ Rafael Laboissiere ]
  * debian/rules: Cope with tilde (~) in the upstream version number

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Fri, 10 Oct 2008 08:51:03 +0000

octave3.0 (1:3.0.2-4) experimental; urgency=low

  * Add octaveX.Y-common package containing the architecture-independent
    files, which were taking too much place in the architecture-dependent
    main package octaveX.Y

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 15 Sep 2008 11:07:18 +0200

octave3.0 (1:3.0.2-3) experimental; urgency=low
