@@ -1,6 +1,7 @@
 octave3.1 (3.1.51-2) UNRELEASED; urgency=low
 
   * Synch with octave3.0 package
+  * debian/rules: Only install enscript files for octave3.0
 
  -- Rafael Laboissiere <rafael@debian.org>  Tue, 06 Jan 2009 11:00:00 +0100
 
